Styling of push pull button and cimmit button at the bottom of sidebar

--- a/app/styles/ui/toolbar/_button.scss
+++ b/app/styles/ui/toolbar/_button.scss
@@ -86,7 +86,8 @@
     margin: 0;
     overflow: hidden;
 
-    background-color: var(--toolbar-button-background-color);
+    // background-color: var(--toolbar-button-background-color);
+    background-color: #24292e;
     color: var(--toolbar-button-color);
 
     border-right: 1px solid var(--toolbar-button-border-color);
