--- a/app/styles/ui/changes/_commit-message.scss
+++ b/app/styles/ui/changes/_commit-message.scss
@@ -181,7 +181,9 @@
 
   .commit-button {
     max-width: 100%;
-    margin-top: var(--spacing);
+    width: 100%;
+    height: 100%;
+    // margin-top: var(--spacing);
     display: flex;
     justify-content: center;
     align-items: center;
