--- a/app/styles/ui/changes/_commit-message.scss
+++ b/app/styles/ui/changes/_commit-message.scss
@@ -19,7 +19,12 @@
       flex: 1;
       margin-bottom: var(--spacing);
 
+      textarea {
+        padding: .5rem;
+      }
+
       input {
+        min-height: 100px;
         width: 100%;
       }
     }
@@ -33,32 +38,6 @@
     }
   }
 
-  &.with-co-authors .description-focus-container {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-
-    // Hack for when co-authors field is merged
-    // with description text area.
-    &.focus-within {
-      z-index: 1;
-    }
-  }
-
-  .co-authors-toggle {
-    color: $gray-500;
-
-    &:hover {
-      color: $gray-900;
-    }
-  }
-
-  &.with-co-authors .co-authors-toggle {
-    color: $blue-400;
-
-    &:hover {
-      color: $blue-600;
-    }
-  }
 
   // When we have an action bar we steal most of that
   // space from the description field and a little from the
