--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -19,7 +19,7 @@
 
   --button-height: 25px;
 
-  --button-background: $blue;
+  --button-background: #EEB111;
   --button-border-radius: 2px;
   --button-hover-background: lighten($blue, 5%);
   --button-text-color: $white;
@@ -197,7 +197,7 @@
   --toolbar-dropdown-open-progress-color: $gray-200;
 
   --tab-bar-height: 29px;
-  --tab-bar-active-color: $blue;
+  --tab-bar-active-color: #EEB111;
   --tab-bar-background-color: $white;
 
   /** Win32 has custom scrol bars, see _scroll.scss */
