--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -21,11 +21,11 @@
 
   --button-background: #EEB111;
   --button-border-radius: 2px;
-  --button-hover-background: lighten($blue, 5%);
+  --button-hover-background: lighten(#EEB111, 5%);
   --button-text-color: $white;
-  --button-focus-border-color: $blue-600;
+  --button-focus-border-color: #EEB111;
 
-  --link-button-color: $blue;
+  --link-button-color: #EEB111;
 
   --secondary-button-background: $gray-000;
   --secondary-button-hover-background: $white;
@@ -216,7 +216,7 @@
   --foldout-z-index: calc(var(--popup-z-index) - 2);
 
   /** The highlight color used for focus rings and focus box shadows */
-  --focus-color: $blue;
+  --focus-color: #EEB111;
 
   /**
    * Variables for form elements
