--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -21,9 +21,9 @@
 
   --button-background: #EEB111;
   --button-border-radius: 2px;
-  --button-hover-background: lighten($blue, 5%);
+  --button-hover-background: lighten(#EEB111, 5%);
   --button-text-color: $white;
-  --button-focus-border-color: $blue-600;
+  --button-focus-border-color: #EEB111;
 
   --link-button-color: $blue;
 
