--- a/app/styles/ui/changes/_commit-message.scss
+++ b/app/styles/ui/changes/_commit-message.scss
@@ -161,7 +161,7 @@
   .commit-button {
     max-width: 100%;
     width: 100%;
-    height: 100%;
+    height: 50px;
     // margin-top: var(--spacing);
     display: flex;
     justify-content: center;
