--- a/app/styles/ui/_tab-bar.scss
+++ b/app/styles/ui/_tab-bar.scss
@@ -23,8 +23,8 @@
     align-items: center;
     justify-content: center;
 
-    border-bottom: 1px solid var(--box-border-color);
-    border-right: 1px solid var(--box-border-color);
+    // border-bottom: 1px solid var(--box-border-color);
+    border-right: 1px solid var(--toolbar-background-color);
 
     // This makes it so that we never render a double-width item border.
     // It has the unintended consequence of making it impossible to have a tab
@@ -38,7 +38,7 @@
     // in so far that it doesn't have an active selection state, just a selected
     // one.
     &.selected {
-      box-shadow: inset 0 -3px 0px var(--tab-bar-active-color);
+      // box-shadow: inset 0 -3px 0px var(--tab-bar-active-color);
     }
 
     .with-indicator {
