--- a/app/styles/ui/changes/_changes-list.scss
+++ b/app/styles/ui/changes/_changes-list.scss
@@ -11,8 +11,7 @@
   flex-direction: column;
 
   .header {
-    background: var(--box-alt-background-color);
-    border-bottom: 1px solid var(--box-border-color);
+
     padding: 0 var(--spacing);
     height: 29px;
 
@@ -30,7 +29,7 @@
         left: 0;
         width: 100%;
         padding: 0 30px;
-        text-align: center;
+        text-align: left;
 
         @include ellipsis;
       }
